--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Логистика">
-        <meta name="author" content="RespectOs">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-        <title>Логистика</title>
+        <title>Landing Page</title>
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
         <link href="css/landing-page.css" rel="stylesheet">
+
+        <!-- Custom Fonts -->
+        <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
     </head>
 
@@ -123,6 +134,10 @@
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h2 class="section-heading">Специальное предложение для новых партнеров:</h2>
+                            <p class="lead">
+                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
+                                <span class="discount">(10000 вместо 20000 рублей)</span>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-lg-offset-3 text-left">
@@ -133,10 +148,12 @@
                             Введите ваш e-mail<br>
                             <input type="text" name="email" value="" placeholder="ivanov@ivan.ru" data-validator="email"><br>
                             Введите ваш телефон<br>
-                            <p class="lead">
-                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
-                                <span class="discount">(10000 вместо 20000 рублей)</span>
-                            </p>
+                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
+                            <br>
+                            <br>
+                            <div class="text-center">
+                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -203,12 +220,10 @@
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h2 class="section-heading">Специальное предложение для новых партнеров:</h2>
-                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
-                            <br>
-                            <br>
-                            <div class="text-center">
-                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
-                            </div>
+                            <p class="lead">
+                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
+                                <span class="discount">(10000 вместо 20000 рублей)</span>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-lg-offset-3 text-left">
@@ -219,10 +234,12 @@
                             Введите ваш e-mail<br>
                             <input type="text" name="email" value="" placeholder="ivanov@ivan.ru" data-validator="email"><br>
                             Введите ваш телефон<br>
-                            <p class="lead">
-                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
-                                <span class="discount">(10000 вместо 20000 рублей)</span>
-                            </p>
+                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
+                            <br>
+                            <br>
+                            <div class="text-center">
+                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -237,12 +254,7 @@
 
             <div class="container">
 
-                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
-                            <br>
-                            <br>
-                            <div class="text-center">
-                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
-                            </div>
+                <div class="row text-center">
                     <div class="col-lg-12">
                         <h2 class="section-heading">Основные направления в области импорта:</h2>
                     </div>
@@ -295,7 +307,10 @@
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h2 class="section-heading">Специальное предложение для новых партнеров:</h2>
-                <div class="row text-center">
+                            <p class="lead">
+                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
+                                <span class="discount">(10000 вместо 20000 рублей)</span>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-lg-offset-3 text-left">
@@ -306,10 +321,12 @@
                             Введите ваш e-mail<br>
                             <input type="text" name="email" value="" placeholder="ivanov@ivan.ru" data-validator="email"><br>
                             Введите ваш телефон<br>
-                            <p class="lead">
-                                Воспользоваться 50% скидкой на поиск надежного поставщика прямо сейчас!<br>
-                                <span class="discount">(10000 вместо 20000 рублей)</span>
-                            </p>
+                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
+                            <br>
+                            <br>
+                            <div class="text-center">
+                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -320,35 +337,11 @@
         </div>
         <!-- /.section-order -->
 
-                            <input type="text" name="phone" placeholder="" data-validator="phone" maxlength="15" value="">
-                            <br>
-                            <br>
-                            <div class="text-center">
-                                <input type="submit" value="Заказать" name="submit-form" class="order-btn">
-                            </div>
-
-            <div class="container">
-
-                <div class="row">
-                    </div>
-                </div>
-
-            </div>
-            <!-- /.container -->
-
-        </div>
-
-            <div class="container">
-
-                <div class="row">
         <div class="section-docs">
-                    </div>
-                </div>
 
-            </div>
-            <!-- /.container -->
+            <div class="container">
 
-        </div>
+                <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">СОПРОВОЖДАЮЩИЕ УСЛУГИ</h2>
                     </div>
@@ -389,27 +382,20 @@
                                 Работа с органами казначейства по исполнительному производству.
                             </li>
                         </ul>
-
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                <div class="row">
                     </div>
                 </div>
+
             </div>
-        </footer>
+            <!-- /.container -->
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        </div>
         <!-- /.section-docs -->
 
         <div class="section-order order-last">
-    </body>
 
-</html>
+            <div class="container">
+
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center">
                             <h2 class="section-heading">Специальное предложение для новых партнеров:</h2>
@@ -434,3 +420,69 @@
                                 <input type="submit" value="Заказать" name="submit-form" class="order-btn">
                             </div>
                         </form>
+                    </div>
+                </div>
+
+            </div>
+            <!-- /.container -->
+
+        </div>
+        <!-- /.section-order -->
+
+        <!-- Footer -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 col-lg-offset-2">
+                        ОсОО "Логистика".<br>
+                        Юридический адрес: 109316, г. Москва<br>
+                        ИНН 12345678901234 КПП 1234567890 ОГРН 1234567890
+                    </div>
+                    <div class="col-lg-5">
+                        &copy; 2007-2014 Логистика. Все права защищены
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- jQuery -->
+        <script src="js/jquery.js"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+        
+        <script type="text/javascript">
+            $form = $('form.order-form');
+            $form.on('submit', function(e){
+                e.preventDefault();
+                
+                $.ajax({
+                    type:'POST',
+                    url: 'https://mandrillapp.com/api/1.0/messages/send.json',
+                    data: {
+                      'key': 'WuQOGZUZZOVJNyTULyOvww',
+                      'message': {
+                        'from_email': $(this).find('input[name=email]').val(),
+                        'to': [
+                            {
+                              'email': 'respect.page@gmail.com',
+                              'name': 'Логистика',
+                              'type': 'to'
+                            }
+                          ],
+                        'autotext': 'true',
+                        'subject': 'Заказ с сайта',
+                        'html': 'Данные клиента:<br>'+
+                                'Имя: '+$(this).find('input[name=name]').val()+'<br>'+
+                                'Email: '+$(this).find('input[name=email]').val()+'<br>'+
+                                'Телефон: '+$(this).find('input[name=phone]').val()
+                      }
+                    }
+                   }).done(function(response) {
+                     console.log(response); // if you're into that sorta thing
+                   });
+            });
+        </script>
+    </body>
+
+</html>
